--- a/mainblog/templates/home.html
+++ b/mainblog/templates/home.html
@@ -1,1 +1,10 @@
-<h1> Hello again template test</h1>
+<h1>Post</h1>
+<ul>
+    {% for post in object_list %}
+
+    <li>{{ post.title }} - {{ post.author.first_name }}
+        <br />
+        {{ post.body }}</li>
+
+    {% endfor %}
+</ul>
