--- a/mainblog/templates/home.html
+++ b/mainblog/templates/home.html
@@ -1,4 +1,9 @@
-<h1>Post</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+
+
+<h1>Posts</h1>
 <ul>
     {% for post in object_list %}
 
@@ -8,3 +13,6 @@
 
     {% endfor %}
 </ul>
+
+
+{% endblock %}
