bootstrap starter in base, remove uneeded items, back link change to btn

--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -11,6 +11,6 @@
 {{ post.body }}
 
 <br/><br/>
-<a href="{% url 'home' %}">Go Back</a>
+<a href="{% url 'home' %}" class="btn btn-dark"></button>Go Back</a>
 
 {% endblock %}
