--- a/mainblog/templates/home.html
+++ b/mainblog/templates/home.html
@@ -7,7 +7,8 @@
 <ul>
     {% for post in object_list %}
 
-    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }}
+    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> -
+        {{ post.author.first_name }} - <a href="{% url 'update_post' post.pk %}">Edit</a>
         <br />
         {{ post.body }}</li>
 
