--- a/mainblog/templates/home.html
+++ b/mainblog/templates/home.html
@@ -8,7 +8,10 @@
     {% for post in object_list %}
 
     <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> -
-        {{ post.author.first_name }} - <a href="{% url 'update_post' post.pk %}">Edit</a>
+        {{ post.author.first_name }} - {{ post.post_date }} - {{ post.post_time }}
+        <a href="{% url 'update_post' post.pk %}">Edit</a>
+        <a href="{% url 'delete_post' post.pk %}">Delete</a>
+
         <br />
         {{ post.body }}</li>
 
