create app for user registration, add register page and ammend settings, urls, views and templates as needed and test

--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -26,6 +26,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'new_post' %}">Create New Post</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create_user' %}">Register</a>
+                </li>
             </ul>
         </div>
     </nav>
