--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -30,6 +30,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'create_user' %}">Register</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
             </ul>
         </div>
     </nav>
