edit templates so relavent content can only be accessed when logged in and tested

--- a/mainblog/templates/new_post.html
+++ b/mainblog/templates/new_post.html
@@ -2,17 +2,22 @@
 {% block title %}Create New Post...{% endblock %}
 {% block content %}
 
-
+{% if user.is_authenticated %}
 <h1>Create New Post...</h1>
-<br/><br/>
+<br /><br />
 <div class="form-group"></div>
 <form method="POST">
-{% csrf_token %}
+    {% csrf_token %}
 
-{{ form.as_p }}
-<button class="btn btn-secondary">Create New Post</button>
+    {{ form.as_p }}
+    <button class="btn btn-secondary">Create New Post</button>
 
-</div>
+    </div>
 
+    {% else %}
 
-{% endblock %}
+    Action not permitted...
+
+    {% endif %}
+
+    {% endblock %}
