--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -23,9 +23,17 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+
+                {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'new_post' %}">Create New Post</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+                {% else %}
+
 
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'create_user' %}">Register</a>
@@ -34,6 +42,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'login' %}">Login</a>
                 </li>
+
+                {% endif %}
             </ul>
         </div>
     </nav>
