--- a/mainblog/templates/delete_post.html
+++ b/mainblog/templates/delete_post.html
@@ -2,7 +2,7 @@
 {% block title %}Delete Blog Post...{% endblock %}
 {% block content %}
 
-
+{% if user.is_authenticated %}
 <h1>Delete Post...</h1>
 <br /><br />
 <h4>Delete: {{ post.title }}</h4>
@@ -13,6 +13,12 @@
     <button class="btn btn-secondary">Delete Post!</button>
 
     </div>
+
+    {% else %}
+
+    Action not permitted...
+
+    {% endif %}
 
 
     {% endblock %}
