--- a/mainblog/templates/home.html
+++ b/mainblog/templates/home.html
@@ -9,8 +9,12 @@
 
     <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> -
         {{ post.author.first_name }} - {{ post.post_date }} - {{ post.post_time }}
+
+        {% if user.is_authenticated %}
         <a href="{% url 'update_post' post.pk %}">Edit</a>
         <a href="{% url 'delete_post' post.pk %}">Delete</a>
+
+        {% endif %}
 
         <br />
         {{ post.body }}</li>
