--- a/mainblog/templates/update_post.html
+++ b/mainblog/templates/update_post.html
@@ -2,7 +2,7 @@
 {% block title %}Edit Blog Post...{% endblock %}
 {% block content %}
 
-
+{% if user.is_authenticated %}
 <h1>Edit Post...</h1>
 <br /><br />
 <div class="form-group"></div>
@@ -13,6 +13,10 @@
     <button class="btn btn-secondary">Edit Post</button>
 
     </div>
+{% else %}
 
+Action not permitted...
+
+{% endif %}
 
     {% endblock %}
