allow html on article details, change home page to show slice rather than full post

--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -19,7 +19,7 @@
 </small><br />
 <hr>
 <br />
-{{ post.body }}
+{{ post.body|safe }}
 
 <br /><br />
 <a href="{% url 'home' %}" class="btn btn-dark"></button>Go Back</a>
