--- a/mainblog/templates/home.html
+++ b/mainblog/templates/home.html
@@ -17,7 +17,7 @@
         {% endif %}
 
         <br />
-        {{ post.body }}</li>
+        {{ post.body|slice:"100" }}</li>
 
     {% endfor %}
 </ul>
