--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -30,6 +30,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'new_category' %}">Create New Category</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
                 {% else %}
