--- a/mainblog/templates/categories.html
+++ b/mainblog/templates/categories.html
@@ -2,9 +2,29 @@
 
 {% block content %}
 
+{% if category_posts %}
 
-<h1>Catagories</h1>
-   
-{{ cats }}
 
+<h1>{{ cats }}</h1>
+<ul>
+    {% for post in category_posts %}
+    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> -
+        {{ post.author.first_name }} - {{ post.post_date }} - {{ post.post_time }}
+
+        {% if user.is_authenticated %}
+        <a href="{% url 'update_post' post.pk %}">Edit</a>
+        <a href="{% url 'delete_post' post.pk %}">Delete</a>
+
+        {% endif %}
+
+        <br />
+        {{ post.body|slice:"100" }}</li>
+
+
+    {% endfor %}
+</ul>
+{% else %}
+<h2>Sorry...this page does not exist...</h2>
+
+{% endif %}
 {% endblock %}
