--- a/mainblog/templates/home.html
+++ b/mainblog/templates/home.html
@@ -7,7 +7,8 @@
 <ul>
     {% for post in object_list %}
 
-    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> -
+    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a>
+        - <a href="{% url 'category' post.category %}">{{ post.category }}</a>
         {{ post.author.first_name }} - {{ post.post_date }} - {{ post.post_time }}
 
         {% if user.is_authenticated %}
