add Category menu to detail page, add user auth for home, update, and delete templates and test

--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -3,7 +3,6 @@
 
 {% block content %}
 
-
 <h1>{{ post.title }}</h1>
 <small>By: {{ post.author.first_name}}
     {{ post.author.last_name}} -
@@ -11,9 +10,11 @@
     {{ post.post_time }}
 
     {% if user.is_authenticated %}
+    {% if user.id == post.author.id %}
     - <a href="{% url 'update_post' post.pk %}">Edit</a>
 
     <a href="{% url 'delete_post' post.pk %}">Delete</a>
+    {% endif %}
 
     {% endif %}
 </small><br />
