--- a/mainblog/templates/delete_post.html
+++ b/mainblog/templates/delete_post.html
@@ -3,16 +3,20 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<h1>Delete Post...</h1>
-<br /><br />
-<h4>Delete: {{ post.title }}</h4>
-<div class="form-group"></div>
-<form method="POST">
-    {% csrf_token %}
-    </br>
-    <button class="btn btn-secondary">Delete Post!</button>
+    {% if user.id == post.author.id %}
+    <h1>Delete Post...</h1>
+    <br /><br />
+    <h4>Delete: {{ post.title }}</h4>
+    <div class="form-group"></div>
+    <form method="POST">
+        {% csrf_token %}
+        </br>
+        <button class="btn btn-secondary">Delete Post!</button>
 
-    </div>
+        </div>
+        {% else %}
+        Action not permitted...
+        {% endif %}
 
     {% else %}
 
