--- a/mainblog/templates/home.html
+++ b/mainblog/templates/home.html
@@ -12,8 +12,10 @@
         {{ post.author.first_name }} - {{ post.post_date }} - {{ post.post_time }}
 
         {% if user.is_authenticated %}
-        <a href="{% url 'update_post' post.pk %}">Edit</a>
-        <a href="{% url 'delete_post' post.pk %}">Delete</a>
+            {% if user.id == post.author.id %}
+            <a href="{% url 'update_post' post.pk %}">Edit</a>
+            <a href="{% url 'delete_post' post.pk %}">Delete</a>
+            {% endif %}
 
         {% endif %}
 
