--- a/mainblog/templates/update_post.html
+++ b/mainblog/templates/update_post.html
@@ -3,16 +3,20 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<h1>Edit Post...</h1>
-<br /><br />
-<div class="form-group"></div>
-<form method="POST">
-    {% csrf_token %}
+{% if user.id == post.author.id %}
+    <h1>Edit Post...</h1>
+    <br /><br />
+    <div class="form-group"></div>
+    <form method="POST">
+        {% csrf_token %}
 
-    {{ form.as_p }}
-    <button class="btn btn-secondary">Edit Post</button>
+        {{ form.as_p }}
+        <button class="btn btn-secondary">Edit Post</button>
 
-    </div>
+        </div>
+        {% else %}
+        Action not permitted...
+        {% endif %}
 {% else %}
 
 Action not permitted...
