add 2nd name author to home, add js logic to newpost to ensure correct author can create post and test

--- a/mainblog/templates/home.html
+++ b/mainblog/templates/home.html
@@ -9,7 +9,7 @@
 
     <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a>
         - <a href="{% url 'category' post.category %}">{{ post.category }}</a>
-        {{ post.author.first_name }} - {{ post.post_date }} - {{ post.post_time }}
+        {{ post.author.first_name }} {{post.author.last_name}} - {{ post.post_date }} - {{ post.post_time }}
 
         {% if user.is_authenticated %}
             {% if user.id == post.author.id %}
