--- a/mainblog/templates/new_post.html
+++ b/mainblog/templates/new_post.html
@@ -14,6 +14,11 @@
 
     </div>
 
+
+    <script>
+        var name = "{{ user.id }}";
+        document.getElementById("author-id").value = name;
+    </script>
     {% else %}
 
     Action not permitted...
