--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -24,5 +24,13 @@
 
 <br /><br />
 <a href="{% url 'home' %}" class="btn btn-dark"></button>Go Back</a>
+<br /></br>
+<hr>
+<br />
+<form action="{% url 'like_post' post.pk %}" method="POST">
+    {% csrf_token %}
+    <button type="submit" , name="post_id" , value="{{ post.id }}" , class="btn btn-primary btn-sm">Like</button>
 
+
+</form>
 {% endblock %}
