--- a/mainblog/templates/new_post.html
+++ b/mainblog/templates/new_post.html
@@ -8,7 +8,7 @@
 <div class="form-group"></div>
 <form method="POST">
     {% csrf_token %}
-
+    {{ form.media }}
     {{ form.as_p }}
     <button class="btn btn-secondary">Create New Post</button>
 
