--- a/mainblog/templates/update_post.html
+++ b/mainblog/templates/update_post.html
@@ -9,7 +9,7 @@
     <div class="form-group"></div>
     <form method="POST">
         {% csrf_token %}
-
+        {{ form.media }}
         {{ form.as_p }}
         <button class="btn btn-secondary">Edit Post</button>
 
