--- a/mainblog/templates/home.html
+++ b/mainblog/templates/home.html
@@ -20,8 +20,7 @@
         {% endif %}
 
         <br />
-        {{ post.body|slice:"100" }}</li>
-
+        {{ post.snippet }}</li>
     {% endfor %}
 </ul>
 
