--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -20,6 +20,9 @@
 </small><br />
 <hr>
 <br />
+{% if post.header_image %}
+<img src="{{ post.header_image.url }}"><br /><br />
+{% endif %}
 {{ post.body|safe }}
 
 <br /><br />
