--- a/mainblog/templates/new_post.html
+++ b/mainblog/templates/new_post.html
@@ -6,7 +6,7 @@
 <h1>Create New Post...</h1>
 <br /><br />
 <div class="form-group"></div>
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.media }}
     {{ form.as_p }}
