--- a/signup/templates/registration/edit_profile.html
+++ b/signup/templates/registration/edit_profile.html
@@ -5,6 +5,9 @@
 
 <h1>Edit Profile...</h1>
 <br /><br />
+{{ user.profile.bio }}
+
+</br>
 <div class="form-group"></div>
 <form method="POST">
     {% csrf_token %}
