add logic for profile pic, and social med links, links not yet functional, migrate changes and test

--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -44,6 +44,28 @@
     {% endif %}
     - {{ total_likes }} Likes
 
-
 </form>
+
+<br/><br/>
+<div class="card mb-3">
+    <div class="row no-gutters">
+      <div class="col-md-2">
+        <img src="{{ post.author.profile.profile_picture.url }}" class="card-img">
+      </div>
+      <div class="col-md-10">
+        <div class="card-body">
+          <h5 class="card-title"> 
+            {{ post.author.first_name}}
+            {{ post.author.last_name}} </h5>
+            <p class="card-text text-muted">
+             <a href="{{ post.author.profile.website_url }}">Website</a> |
+             <a href="{{ post.author.profile.facebook_url }}">Facebook </a>| 
+             <a href="{{ post.author.profile.instagram_url }}">Instagram </a>| 
+             <a href="{{ post.author.profile.twitter_url }}">Twitter</a>
+            </p>
+          <p class="card-text">{{ post.author.profile.bio }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
