--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -58,11 +58,18 @@
             {{ post.author.first_name}}
             {{ post.author.last_name}} </h5>
             <p class="card-text text-muted">
+              {% if post.author.profile.website_url %}
              <a href="{{ post.author.profile.website_url }}">Website</a> |
-             <a href="{{ post.author.profile.facebook_url }}">Facebook </a>| 
-             <a href="{{ post.author.profile.instagram_url }}">Instagram </a>| 
+              {% endif %}
+              {% if post.author.profile.facebook_url %} 
+             <a href="{{ post.author.profile.facebook_url }}">Facebook </a>|
+             {% endif %}
+             {% if post.author.profile.instagram_url %} 
+             <a href="{{ post.author.profile.instagram_url }}">Instagram </a>|
+             {% endif %}
+             {% if post.author.profile.twitter_url %} 
              <a href="{{ post.author.profile.twitter_url }}">Twitter</a>
-            </p>
+            </p>{% endif %}
           <p class="card-text">{{ post.author.profile.bio }}</p>
         </div>
       </div>
