add if statement to profile pic

--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -50,7 +50,9 @@
 <div class="card mb-3">
     <div class="row no-gutters">
       <div class="col-md-2">
-        <img src="{{ post.author.profile.profile_picture.url }}" class="card-img">
+        {% if  post.author.profile.profile_picture.url %}
+        <img src="{{ post.author.profile.profile_picture }}" class="card-img">
+        {% endif %}
       </div>
       <div class="col-md-10">
         <div class="card-body">
