add provisional default profile pic to article detail and test

--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -1,22 +1,23 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}{{ post.title_tag }}{% endblock %}
 
 {% block content %}
 
 <h1>{{ post.title }}</h1>
 <small>By: {{ post.author.first_name}}
-    {{ post.author.last_name}} -
-    {{ post.post_date }}
-    {{ post.post_time }}
+  {{ post.author.last_name}} -
+  {{ post.post_date }}
+  {{ post.post_time }}
 
-    {% if user.is_authenticated %}
-    {% if user.id == post.author.id %}
-    - <a href="{% url 'update_post' post.pk %}">Edit</a>
+  {% if user.is_authenticated %}
+  {% if user.id == post.author.id %}
+  - <a href="{% url 'update_post' post.pk %}">Edit</a>
 
-    <a href="{% url 'delete_post' post.pk %}">Delete</a>
-    {% endif %}
+  <a href="{% url 'delete_post' post.pk %}">Delete</a>
+  {% endif %}
 
-    {% endif %}
+  {% endif %}
 </small><br />
 <hr>
 <br />
@@ -32,49 +33,51 @@
 <br />
 {% if user.is_authenticated %}
 <form action="{% url 'like_post' post.pk %}" method="POST">
-    {% csrf_token %}
+  {% csrf_token %}
 
-    {% if liked %}
-    <button type="submit" , name="post_id" , value="{{ post.id }}" , class="btn btn-danger btn-sm">Unlike</button>
-    {% else %}
+  {% if liked %}
+  <button type="submit" , name="post_id" , value="{{ post.id }}" , class="btn btn-danger btn-sm">Unlike</button>
+  {% else %}
 
-    <button type="submit" , name="post_id" , value="{{ post.id }}" , class="btn btn-primary btn-sm">Like</button>
-    {% endif %}
+  <button type="submit" , name="post_id" , value="{{ post.id }}" , class="btn btn-primary btn-sm">Like</button>
+  {% endif %}
 
-    {% endif %}
-    - {{ total_likes }} Likes
+  {% endif %}
+  - {{ total_likes }} Likes
 
 </form>
 
-<br/><br/>
+<br /><br />
 <div class="card mb-3">
-    <div class="row no-gutters">
-      <div class="col-md-2">
-        {% if  post.author.profile.profile_picture.url %}
-        <img src="{{ post.author.profile.profile_picture }}" class="card-img">
-        {% endif %}
-      </div>
-      <div class="col-md-10">
-        <div class="card-body">
-          <h5 class="card-title"> 
-            {{ post.author.first_name}}
-            {{ post.author.last_name}} </h5>
-            <p class="card-text text-muted">
-              {% if post.author.profile.website_url %}
-             <a href="{{ post.author.profile.website_url }}">Website</a> |
-              {% endif %}
-              {% if post.author.profile.facebook_url %} 
-             <a href="{{ post.author.profile.facebook_url }}">Facebook </a>|
-             {% endif %}
-             {% if post.author.profile.instagram_url %} 
-             <a href="{{ post.author.profile.instagram_url }}">Instagram </a>|
-             {% endif %}
-             {% if post.author.profile.twitter_url %} 
-             <a href="{{ post.author.profile.twitter_url }}">Twitter</a>
-            </p>{% endif %}
-          <p class="card-text">{{ post.author.profile.bio }}</p>
-        </div>
+  <div class="row no-gutters">
+    <div class="col-md-2">
+      {% if  post.author.profile.profile_picture.url %}
+      <img src="{{ post.author.profile.profile_picture }}" class="card-img">
+      {% else %}
+      <img src="{% static 'mainblog/images/default_profile.jpg' %}" class="card-img">
+      {% endif %}
+    </div>
+    <div class="col-md-10">
+      <div class="card-body">
+        <h5 class="card-title">
+          {{ post.author.first_name}}
+          {{ post.author.last_name}} </h5>
+        <p class="card-text text-muted">
+          {% if post.author.profile.website_url %}
+          <a href="{{ post.author.profile.website_url }}">Website</a> |
+          {% endif %}
+          {% if post.author.profile.facebook_url %}
+          <a href="{{ post.author.profile.facebook_url }}">Facebook </a>|
+          {% endif %}
+          {% if post.author.profile.instagram_url %}
+          <a href="{{ post.author.profile.instagram_url }}">Instagram </a>|
+          {% endif %}
+          {% if post.author.profile.twitter_url %}
+          <a href="{{ post.author.profile.twitter_url }}">Twitter</a>
+        </p>{% endif %}
+        <p class="card-text">{{ post.author.profile.bio }}</p>
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
