add link to profile to article detail, add url and view logic for main profile page

--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -64,7 +64,8 @@
           {{ post.author.last_name}} </h5>
         <p class="card-text text-muted">
           {% if post.author.profile.website_url %}
-          <a href="{{ post.author.profile.website_url }}">Website</a> |
+          <a href="{% url 'show_profile_page' post.author.profile.id %}">Profile Page</a> 
+          <a href="{{ post.author.profile.website_url }}">| Website</a> |
           {% endif %}
           {% if post.author.profile.facebook_url %}
           <a href="{{ post.author.profile.facebook_url }}">Facebook </a>|
