--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -50,8 +50,18 @@
                     <a class="nav-link" href="{% url 'new_category' %}">Create New Category</a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Profile
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Settings</a>
+                        <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile
+                            Page</a>
+                        <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile
+                            Page</a>
+                    </div>
                 </li>
 
                 <li class="nav-item">
