create custom user profile form, ammend models and views as needed to render and test

--- a/signup/templates/registration/user_profile.html
+++ b/signup/templates/registration/user_profile.html
@@ -8,7 +8,7 @@
 <div class="card mb-3">
     <div class="row no-gutters">
       <div class="col-md-2">
-        {% if  page_user.profile_picture.url %}
+        {% if  page_user.profile_picture %}
         <img src="{{ page_user.profile_picture.url }}" class="card-img">
         {% else %}
         <img src="{% static 'mainblog/images/default_profile.jpg' %}" class="card-img">
