create custom comment form add to views and test

--- a/mainblog/templates/new_comment.html
+++ b/mainblog/templates/new_comment.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Create New Post...{% endblock %}
+{% block title %}Comment on a post...{% endblock %}
 {% block content %}
 
 <h1>Comment on a Post...</h1>
