--- a/signup/templates/registration/login.html
+++ b/signup/templates/registration/login.html
@@ -9,10 +9,17 @@
 <form method="POST">
 {% csrf_token %}
 
-{{ form.as_p }}
+<form>
+    <div class="form-group">
+      <input type="text" class="form-control" name="username" placeholder="Username">
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control" name="password" placeholder="Password">
+    </div>
+
 <button class="btn btn-secondary">Login</button>
 
 </div>
-
+</form>
 
 {% endblock %}
