--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -90,6 +90,20 @@
 
                 {% endif %}
             </ul>
+            {% if user.is_authenticated %}
+            {% if user.profile.id %}
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'show_profile_page' user.profile.id %}">
+                        {{ user.first_name }}
+                        {{ user.last_name }}
+
+
+                    </a>
+                </li>
+            </ul>
+            {% endif %}
+            {% endif %}
         </div>
     </nav>
     <div class="container">
