--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -99,6 +99,15 @@
             {% endif %}
         </div>
     </nav>
+    <ul class="messages">
+        {% if messages %}
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+ 
+
     <div class="container">
 
 
