--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!doctype html>
 <html lang="en">
 
@@ -11,12 +10,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <!-- custom css stylesheet -->
+
+    <link rel="stylesheet" href="{% static 'mainblog/css/style.css' %}">
+
 
     <title>{% block title %}Welcome to Code Zone {% endblock %}</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="main-nav">
         <a class="navbar-brand" href="{% url 'home' %}">Code Zone</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,7 +107,7 @@
     {% for message in messages %}
     <div class="alert {{message.tags}} alert-success" id="msg" role="alert">
         {{ message | safe}}
-        
+
     </div>
     {% endfor %}
 
