--- a/signup/templates/registration/edit_profile.html
+++ b/signup/templates/registration/edit_profile.html
@@ -12,7 +12,7 @@
     {% csrf_token %}
 
     {{ form.as_p }}
-    <button class="btn btn-secondary">Update Profile</button>
+    <button class="btn btn-secondary">Update Settings</button>
 
     </div>
 
