--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="main-nav">
+    <nav class="navbar navbar-expand-lg main-navbar" >
         <a class="navbar-brand" href="{% url 'home' %}">Code Zone</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
