--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg main-navbar" >
+    <nav class="navbar navbar-expand-lg main-navbar">
         <a class="navbar-brand" href="{% url 'home' %}">Code Zone</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,10 +104,12 @@
             {% endif %}
         </div>
     </nav>
-    {% for message in messages %}
-    <div class="alert {{message.tags}} alert-success" id="msg" role="alert">
-        {{ message | safe}}
+    <div class="container">
+        {% for message in messages %}
+        <div class="{{message.tags}}" id="msg" role="alert">
+            {{ message | safe}}
 
+        </div>
     </div>
     {% endfor %}
 
