--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -19,20 +19,21 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg main-navbar">
-        <a class="navbar-brand" href="{% url 'home' %}">Code Zone</a>
+
+    <nav class="navbar navbar-expand-lg navbar-light " id="main-navbar">
+        <a class="navbar-brand" id="nav-logo" href="{% url 'home' %}">Code Zone</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav">
 
                 <!--Category Menu-->
                 {% if cat_menu %}
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Categories
                     </a>
@@ -104,6 +105,7 @@
             {% endif %}
         </div>
     </nav>
+    
     <div class="container">
         {% for message in messages %}
         <div class="{{message.tags}}" id="msg" role="alert">
@@ -125,6 +127,7 @@
         {% endblock %}
 
     </div>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
