--- a/static/mainblog/css/style.css
+++ b/static/mainblog/css/style.css
@@ -1,30 +1,26 @@
-body {
+ body {
     background-color: black;
     color: white;
-}
+   }
 
-.main-navbar {
+
+footer {
     background-color: #f57542;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px; 
 }
-
-.navbar-brand {
-    color: white;
-}
-
-.nav-link {
-    color: white;
-
-}
-
-.card-title {
-    color: black;
-}
-
 
 #msg {
     background-color: #f57542;
     text-align: center;
 }
+
+#main-navbar {
+    background-color: #f57542;
+}
+
 
 
 
