re add css to make profile text visable, add custom colour for buttons to delete post, new cat, new post and change password forms and test

--- a/mainblog/templates/new_category.html
+++ b/mainblog/templates/new_category.html
@@ -10,7 +10,7 @@
     {% csrf_token %}
 
     {{ form.as_p }}
-    <button class="btn btn-secondary">Create New Category</button>
+    <button class="btn btn-site-theme">Create New Category</button>
 
     </div>
 
