--- a/mainblog/templates/delete_post.html
+++ b/mainblog/templates/delete_post.html
@@ -11,7 +11,7 @@
     <form method="POST">
         {% csrf_token %}
         </br>
-        <button class="btn btn-secondary">Delete Post!</button>
+        <button class="btn-site-theme">Delete Post!</button>
 
         </div>
         {% else %}
