--- a/mainblog/templates/new_post.html
+++ b/mainblog/templates/new_post.html
@@ -10,7 +10,7 @@
     {% csrf_token %}
     {{ form.media }}
     {{ form.as_p }}
-    <button class="btn btn-secondary">Create New Post</button>
+    <button class="btn btn-site-theme">Create New Post</button>
 
     </div>
 
