--- a/signup/templates/registration/edit_profile_page.html
+++ b/signup/templates/registration/edit_profile_page.html
@@ -10,8 +10,8 @@
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button class="btn btn-secondary">Update Profile Page</button>
-
+    <button class="btn-site-theme">Update Profile Page</button>
+    
     </div>
 
     {% else %}
