--- a/signup/templates/registration/login.html
+++ b/signup/templates/registration/login.html
@@ -17,7 +17,7 @@
       <input type="password" class="form-control" name="password" placeholder="Password">
     </div>
 
-<button class="btn btn-secondary">Login</button>
+<button class="btn-site-theme">Login</button>
 
 </div>
 </form>
