--- a/signup/templates/registration/register.html
+++ b/signup/templates/registration/register.html
@@ -10,7 +10,7 @@
 {% csrf_token %}
 
 {{ form.as_p }}
-<button class="btn btn-secondary">Login</button>
+<button class="btn-site-theme">Login</button>
 
 </div>
 
