change like unlike button styling, setup dirs and files for tests

--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -34,7 +34,7 @@
   <button type="submit" , name="post_id" , value="{{ post.id }}" , class="btn btn-danger btn-sm">Unlike</button>
   {% else %}
 
-  <button type="submit" , name="post_id" , value="{{ post.id }}" , class="btn btn-primary btn-sm">Like</button>
+  <button type="submit" , name="post_id" , value="{{ post.id }}" , class="btn btn-site-theme btn-sm">Like</button>
   {% endif %}
 
   {% endif %}
