--- a/static/mainblog/css/style.css
+++ b/static/mainblog/css/style.css
@@ -1,42 +1,41 @@
  body {
-    background-color: black;
-    color: white;
-   }
+     background-color: black;
+     color: white;
+ }
 
 
-footer {
-    background-color: #f57542;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 60px; 
-}
+ footer {
+     background-color: #f57542;
+     position: fixed;
+     bottom: 0;
+     width: 100%;
+     height: 60px;
+ }
 
 
+ a {
+     color: #f57542;
 
-a {
-    color:  #f57542;
+ }
 
-}
+ .card-title {
+     color: black;
 
-.card-title {
-    color: black;
+ }
 
-}
+ .btn-site-theme {
+     background-color: #f57542;
+ }
 
-.btn-site-theme {
-    background-color: #f57542;
-}
+ .card-text {
+     color: black;
+ }
 
-#msg {
-    background-color: #f57542;
-    text-align: center;
-}
+ #msg {
+     background-color: #f57542;
+     text-align: center;
+ }
 
-#main-navbar {
-    background-color: #f57542;
-}
-
-
-
-
+ #main-navbar {
+     background-color: #f57542;
+ }
