add testing for add comments and like and unlike with screenshots, correct button colouor in add comment template

--- a/mainblog/templates/new_comment.html
+++ b/mainblog/templates/new_comment.html
@@ -8,7 +8,7 @@
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button class="btn btn-secondary">Add Comment</button>
+    <button class="btn btn-site-theme">Add Comment</button>
 
     </div>
 
