--- a/mainblog/templates/update_post.html
+++ b/mainblog/templates/update_post.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         {{ form.media }}
         {{ form.as_p }}
-        <button class="btn btn-secondary">Edit Post</button>
+        <button class="btn btn-site-theme">Edit Post</button>
 
         </div>
         {% else %}
