--- a/signup/templates/registration/user_profile.html
+++ b/signup/templates/registration/user_profile.html
@@ -3,43 +3,43 @@
 {% block content %}
 
 <h1>User Profile...</h1>
-<br/>
+<br />
 
 <div class="card mb-3">
-    <div class="row no-gutters">
-      <div class="col-md-2">
-        {% if  page_user.profile_picture %}
-        <img src="{{ page_user.profile_picture.url }}" class="card-img">
-        {% else %}
-        <img src="{% static 'mainblog/images/default_profile.jpg' %}" class="card-img">
-        {% endif %}
-      </div>
-      <div class="col-md-10">
-        <div class="card-body">
-          <h5 class="card-title">
-            {{ page_user.user.first_name }}
-            {{ page_user.user.last_name }} </h5>
-          <p class="card-text text-muted">
+  <div class="row no-gutters">
+    <div class="col-md-2">
+      {% if  page_user.profile_picture %}
+      <img src="{{ page_user.profile_picture.url }}" class="card-img" alt="profile-picture">
+      {% else %}
+      <img src="{% static 'mainblog/images/default_profile.jpg' %}" class="card-img" alt="default-profile-picture">
+      {% endif %}
+    </div>
+    <div class="col-md-10">
+      <div class="card-body">
+        <h5 class="card-title">
+          {{ page_user.user.first_name }}
+          {{ page_user.user.last_name }} </h5>
+        <p class="card-text text-muted">
 
-            {% if page_user.website_url %}
-            <a href="{{ page_user.website_url }}"> Website</a> |
-            {% endif %}
+          {% if page_user.website_url %}
+          <a href="{{ page_user.website_url }}"> Website</a> |
+          {% endif %}
 
-            {% if page_user.facebook_url %}
-            <a href="{{ page_user.facebook_url }}">Facebook </a>|
-            {% endif %}
+          {% if page_user.facebook_url %}
+          <a href="{{ page_user.facebook_url }}">Facebook </a>|
+          {% endif %}
 
-            {% if page_user.instagram_url %}
-            <a href="{{ page_user.instagram_url }}">Instagram </a>|
-            {% endif %}
+          {% if page_user.instagram_url %}
+          <a href="{{ page_user.instagram_url }}">Instagram </a>|
+          {% endif %}
 
-            {% if page_user.twitter_url %}
-            <a href="{{ page_user.twitter_url }}">Twitter</a>
-          </p>{% endif %}
+          {% if page_user.twitter_url %}
+          <a href="{{ page_user.twitter_url }}">Twitter</a>
+        </p>{% endif %}
 
-          <p class="card-text">{{ page_user.bio }}</p>
-        </div>
+        <p class="card-text">{{ page_user.bio }}</p>
       </div>
     </div>
   </div>
-  {% endblock %}
+</div>
+{% endblock %}
