--- a/signup/templates/registration/change-password.html
+++ b/signup/templates/registration/change-password.html
@@ -4,15 +4,14 @@
 
 
 <h1>Change Password...</h1>
-<br/><br/>
+<br/><br />
 <div class="form-group"></div>
 <form method="POST">
-{% csrf_token %}
+    {% csrf_token %}
 
-{{ form.as_p }}
-<button class="btn-site-theme">Change Password</button>
+    {{ form.as_p }}
+    <button class="btn-site-theme">Change Password</button>
 
-</div>
-
+</form>
 
 {% endblock %}
