--- a/signup/templates/registration/edit_profile.html
+++ b/signup/templates/registration/edit_profile.html
@@ -4,9 +4,6 @@
 
 
 <h1>Edit Settings...</h1>
-<br /><br />
-
-</br>
 <div class="form-group"></div>
 <form method="POST">
     {% csrf_token %}
@@ -14,7 +11,7 @@
     {{ form.as_p }}
     <button class="btn-site-theme">Update Settings</button>
 
-    </div>
+</form>
 
 
     {% endblock %}
