--- a/signup/templates/registration/edit_profile_page.html
+++ b/signup/templates/registration/edit_profile_page.html
@@ -4,24 +4,24 @@
 
 {% if user.is_authenticated %}
 {% if user.id == profile.user.id %}
-<h1>Edit Profile Page...</h1>
+<h1>Edit Profile...</h1>
 <br /><br />
 <div class="form-group"></div>
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="btn-site-theme">Update Profile Page</button>
-    
-    </div>
 
-    {% else %}
+</form>
+{% else %}
 
-    <h2>You are not the correct user to edit this page...</h2>
+<h2>You are not the correct user to edit this page...</h2>
 
-    {% endif %}
-    {% else %}
-    <h2>Action not permitted...</h2>
+{% endif %}
 
-    {% endif %}
+{% else %}
+<h2>Action not permitted...</h2>
 
-    {% endblock %}
+{% endif %}
+
+{% endblock %}
