--- a/signup/templates/registration/register.html
+++ b/signup/templates/registration/register.html
@@ -4,15 +4,13 @@
 
 
 <h1>Register...</h1>
-<br/><br/>
+<br /><br />
 <div class="form-group"></div>
 <form method="POST">
-{% csrf_token %}
+    {% csrf_token %}
 
-{{ form.as_p }}
-<button class="btn-site-theme">Login</button>
-
-</div>
-
+    {{ form.as_p }}
+    <button class="btn-site-theme">Login</button>
+</form>
 
 {% endblock %}
