--- a/mainblog/templates/new_category.html
+++ b/mainblog/templates/new_category.html
@@ -11,13 +11,13 @@
 
     {{ form.as_p }}
     <button class="btn btn-site-theme">Create New Category</button>
+</form>
 
-    </div>
 
-    {% else %}
+{% else %}
 
-    Action not permitted...
+Action not permitted...
 
-    {% endif %}
+{% endif %}
 
-    {% endblock %}
+{% endblock %}
