--- a/mainblog/templates/new_comment.html
+++ b/mainblog/templates/new_comment.html
@@ -9,7 +9,5 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button class="btn btn-site-theme">Add Comment</button>
-
-    </div>
-
-    {% endblock %}
+</form>
+{% endblock %}
