--- a/mainblog/templates/categories.html
+++ b/mainblog/templates/categories.html
@@ -11,9 +11,10 @@
     <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a>
         - {{ post.author.first_name }} {{ post.author.last_name }} - {{ post.post_date }} - {{ post.post_time }}
         {% if user.is_authenticated %}
+        {% if user.id == post.author.id %}
         <a href="{% url 'update_post' post.pk %}">Edit</a>
         <a href="{% url 'delete_post' post.pk %}">Delete</a>
-
+        {% endif %}
         {% endif %}
 
         {{ post.body|slice:"100"|safe }}</li>
