remove defunct ck editor import from models, ammend article detail and profile pages so all profile links open new tab

--- a/mainblog/templates/article_details.html
+++ b/mainblog/templates/article_details.html
@@ -61,7 +61,7 @@
         <p class="card-text text-muted">
           {% if post.author.profile.website_url %}
           <a href="{% url 'show_profile_page' post.author.profile.id %}">Profile Page</a>
-          <a href="{{ post.author.profile.website_url }}">| Website</a> |
+          <a href="{{ post.author.profile.website_url }}" target="_blank">| Website</a> |
           {% endif %}
           {% if post.author.profile.facebook_url %}
           <a href="{{ post.author.profile.facebook_url }}" target="_blank">Facebook </a>|
