--- a/mainblog/templates/base.html
+++ b/mainblog/templates/base.html
@@ -4,12 +4,15 @@
 
 <head>
     <!-- Required meta tags -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
     <!-- custom css stylesheet -->
 
     <link rel="stylesheet" href="{% static 'mainblog/css/style.css' %}">
@@ -19,6 +22,8 @@
 </head>
 
 <body>
+
+    <!-- Main Navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light " id="main-navbar">
         <a class="navbar-brand" id="nav-logo" href="{% url 'home' %}">Code Zone</a>
@@ -31,10 +36,11 @@
             <ul class="navbar-nav">
 
                 <!--Category Menu-->
+
                 {% if cat_menu %}
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
                         Categories
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -47,6 +53,10 @@
                     </div>
                 </li>
                 {% endif %}
+
+
+                <!--New post/Create new category-->
+
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'new_post' %}">Create New Post</a>
@@ -59,6 +69,8 @@
                 {% else %}
 
 
+                <!--Register/login-->
+
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'create_user' %}">Register</a>
                 </li>
@@ -69,6 +81,10 @@
 
                 {% endif %}
             </ul>
+
+
+            <!--Profile menu-->
+
             {% if user.is_authenticated %}
             <ul class="navbar-nav ml-auto">
 
@@ -98,14 +114,14 @@
                         <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                     </div>
                 </li>
-
-                
-                
             </ul>
             {% endif %}
         </div>
     </nav>
-    
+
+
+    <!--Notification messages-->
+
     <div class="container">
         {% for message in messages %}
         <div class="{{message.tags}}" id="msg" role="alert">
@@ -114,14 +130,10 @@
         </div>
     </div>
     {% endfor %}
-
-
     </div>
 
-
+    <!-- Content block-->
     <div class="container">
-
-
         {% block content %}
 
         {% endblock %}
@@ -129,15 +141,14 @@
     </div>
 
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <!-- Bootstrap scripts-->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
     </script>
+    <!-- Notification timeout script-->
     <script>
         setTimeout(function () {
             let messages = document.getElementById('msg');
@@ -145,13 +156,6 @@
             alert.close();
         }, 2500);
     </script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-    -->
 </body>
 
 </html>
